--- a/package.json
+++ b/package.json
@@ -1,13 +1,31 @@
 {
-  "name": "youtube-dash-sidx",
-  "version": "0.1.0",
-  "main": "index.js",
-  "dependencies": {
-    "multiparty": "^4.1.0",
-    "bluebird": "^3.2.1",
-    "ytdl-core": "^0.7.9",
-    "yargs": "3.32.0",
-    "xhr2": "0.1.3",
-    "xml2js": "0.4.13"
-  }
+    "name": "youtube-dash-sidx",
+    "description": "Retreive the sidx of a youtube video from the id.",
+    "homepage": "https://github.com/samelie/youtube-dash-sidx/",
+    "author": "Sam Elie <samradelie@gmail.com>",
+    "version": "0.0.9",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/samelie/youtube-dash-sidx.git",
+        "web": "https://github.com/samelie/youtube-dash-sidx/"
+    },
+    "main": "index.js",
+    "devDependencies": {
+        "bluebird": "^3.2.1",
+        "ytdl-core": "^0.7.9",
+        "xhr2": "0.1.3",
+        "xml2js": "0.4.13"
+    },
+    "keywords": [
+        "youtube",
+        "dash",
+        "sidx",
+        "mpd"
+    ],
+    "bugs": {
+        "url": "https://github.com/samelie/youtube-dash-sidx/issues"
+    },
+    "engines": {
+        "node": ">=5.0.0"
+    }
 }
