--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
         "web": "https://github.com/samelie/youtube-dash-sidx/"
     },
     "main": "index.js",
-    "devDependencies": {
+    "dependencies": {
         "bluebird": "^3.2.1",
         "ytdl-core": "^0.7.9",
-        "xhr2": "0.1.3",
         "xml2js": "0.4.13"
     },
     "keywords": [
@@ -24,8 +23,5 @@
     ],
     "bugs": {
         "url": "https://github.com/samelie/youtube-dash-sidx/issues"
-    },
-    "engines": {
-        "node": ">=5.0.0"
     }
 }
