--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-    "name": "youtube-dash-sidx",
+    "name": "node-youtube-dash-sidx",
     "description": "Retreive the sidx of a youtube video from the id.",
-    "homepage": "https://github.com/samelie/youtube-dash-sidx/",
+    "homepage": "https://github.com/samelie/node-youtube-dash-sidx/",
     "author": "Sam Elie <samradelie@gmail.com>",
     "version": "0.1.0",
     "repository": {
         "type": "git",
-        "url": "https://github.com/samelie/youtube-dash-sidx.git",
-        "web": "https://github.com/samelie/youtube-dash-sidx/"
+        "url": "https://github.com/samelie/node-youtube-dash-sidx.git",
+        "web": "https://github.com/samelie/node-youtube-dash-sidx/"
     },
     "main": "index.js",
-    "dependencies": {
+    "devDependencies": {
         "bluebird": "^3.2.1",
         "ytdl-core": "^0.7.9",
+        "xhr2": "0.1.3",
         "xml2js": "0.4.13"
     },
     "keywords": [
@@ -22,6 +23,9 @@
         "mpd"
     ],
     "bugs": {
-        "url": "https://github.com/samelie/youtube-dash-sidx/issues"
+        "url": "https://github.com/samelie/node-youtube-dash-sidx/issues"
+    },
+    "engines": {
+        "node": ">=5.0.0"
     }
 }
