--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "web": "https://github.com/samelie/node-youtube-dash-sidx/"
     },
     "main": "index.js",
-    "devDependencies": {
+    "dependencies": {
         "bluebird": "^3.2.1",
         "ytdl-core": "^0.7.9",
         "xhr2": "0.1.3",
@@ -27,5 +27,9 @@
     },
     "engines": {
         "node": ">=5.0.0"
-    }
+    },
+    "licenses": [{
+        "type": "MIT",
+        "url": "https://github.com/samelie/node-youtube-dash-sidx/raw/master/LICENSE"
+    }]
 }
