--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-youtube-dash-sidx",
+  "name": "@samelie/node-youtube-dash-sidx",
   "description": "Retreive the sidx of a youtube video from the id.",
   "homepage": "https://github.com/samelie/node-youtube-dash-sidx/",
   "author": "Sam Elie <samradelie@gmail.com>",
@@ -18,6 +18,7 @@
     "xml2js": "0.4.13",
     "ytdl-core": "^0.7.9"
   },
+  "private":true,
   "keywords": [
     "youtube",
     "dash",
