--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Retreive the sidx of a youtube video from the id.",
   "homepage": "https://github.com/samelie/node-youtube-dash-sidx/",
   "author": "Sam Elie <samradelie@gmail.com>",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/samelie/node-youtube-dash-sidx.git",
@@ -14,8 +14,8 @@
     "bluebird": "^3.2.1",
     "lodash": "^4.16.3",
     "readdir": "0.0.13",
-    "shelljs": "^0.7.0",
-    "xhr2": "0.1.3",
+    "rimraf": "^2.5.4",
+    "xhr-request": "^1.0.1",
     "xml2js": "0.4.13",
     "ytdl-core": "^0.7.9"
   },
