--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@samelie/node-youtube-dash-sidx",
+  "name": "node-youtube-dash-sidx",
   "description": "Retreive the sidx of a youtube video from the id.",
-  "homepage": "https://github.com/samelie/node-youtube-dash-sidx/",
+  "homepage": "https://github.com/samradical/node-youtube-dash-sidx/",
   "author": "Sam Elie <samradelie@gmail.com>",
   "version": "0.5.0",
-  "scripts":{
-    "update":"curl -L https://yt-dl.org/downloads/latest/youtube-dl -o bin && chmod a+rx bin/youtube-dl"
+  "scripts": {
+    "update": "curl -L https://yt-dl.org/downloads/latest/youtube-dl -o bin && chmod a+rx bin/youtube-dl"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/samelie/node-youtube-dash-sidx.git",
-    "web": "https://github.com/samelie/node-youtube-dash-sidx/"
+    "url": "https://github.com/samradical/node-youtube-dash-sidx.git",
+    "web": "https://github.com/samradical/node-youtube-dash-sidx/"
   },
-  "main": "index.new.js",
+  "main": "index.js",
   "dependencies": {
     "bluebird": "^3.2.1",
     "check-types": "^7.1.5",
@@ -30,7 +30,7 @@
     "mpd"
   ],
   "bugs": {
-    "url": "https://github.com/samelie/node-youtube-dash-sidx/issues"
+    "url": "https://github.com/samradical/node-youtube-dash-sidx/issues"
   },
   "engines": {
     "node": ">=5.0.0"
@@ -38,7 +38,7 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/samelie/node-youtube-dash-sidx/raw/master/LICENSE"
+      "url": "https://github.com/samradical/node-youtube-dash-sidx/raw/master/LICENSE"
     }
   ],
   "devDependencies": {}
