--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-youtube-dash-sidx",
+  "name": "node-dash-sidx",
   "description": "Retreive the sidx of a youtube video from the id.",
-  "homepage": "https://github.com/samradical/node-youtube-dash-sidx/",
+  "homepage": "https://github.com/samradical/node-dash-sidx/",
   "author": "Sam Elie <sam@add.dog>",
   "version": "0.1.0",
   "scripts": {
@@ -9,8 +9,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/samradical/node-youtube-dash-sidx.git",
-    "web": "https://github.com/samradical/node-youtube-dash-sidx/"
+    "url": "https://github.com/samradical/node-dash-sidx.git",
+    "web": "https://github.com/samradical/node-dash-sidx/"
   },
   "main": "index.js",
   "dependencies": {
@@ -26,7 +26,7 @@
   "keywords": [
   ],
   "bugs": {
-    "url": "https://github.com/samradical/node-youtube-dash-sidx/issues"
+    "url": "https://github.com/samradical/node-dash-sidx/issues"
   },
   "engines": {
     "node": ">=5.0.0"
@@ -34,8 +34,7 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/samradical/node-youtube-dash-sidx/raw/master/LICENSE"
+      "url": "https://github.com/samradical/node-dash-sidx/raw/master/LICENSE"
     }
-  ],
-  "devDependencies": {}
+  ]
 }
